# pysubclasses

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  dist-workspace.toml  justfile  plan.md
.github/workflows/: ci.yml  release.yml
src/: cache.rs  discovery.rs  error.rs  graph.rs  lib.rs  main.rs  parser.rs  registry.rs  utils.rs
tests/: integration_test.rs
