[package]
name = "pysubclasses"
version = "0.1.0"
edition = "2024"

[lib]
name = "pysubclasses"
path = "src/lib.rs"

[[bin]]
name = "pysubclasses"
path = "src/main.rs"

[dependencies]
# AST Parsing
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }

# CLI
clap = { version = "4", features = ["derive"] }

# Error Handling
anyhow = "1"
thiserror = "1"

# File System
ignore = "0.4"

# Output Formatting
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
